# gir

./: .gitignore  Dockerfile  Pipfile  README.md  cog.py  main.py  migrate.py  pyproject.toml  requirements.txt  setup.py  test.py
.devcontainer/: devcontainer.json
cogs/: errorhandler.py
cogs/commands/: genius.py
cogs/commands/hungergames/: context.py  default_players.py  enums.py  events.py  game.py  hungergames.py  hungrybot.py  player.py
cogs/commands/info/: devices.py  help.py  port.py  serverinfo.py  stats.py  tags.py  userinfo.py
cogs/commands/misc/: admin.py  genius.py  giveaway.py  misc.py  music.py  music_old.py  parcility.py  stonks.py  subnews.py  talkboard.py  video.py  video_old.py
cogs/commands/mod/: antiraid.py  cases.py  filter.py  modactions.py  modutils.py  trivia.py
cogs/monitors/: antiraid.py  applenews.py  birthday.py  boosteremojis.py  filter.py  logging.py  reactionroles.py  report.py  xp.py
cogs/utils/: case.py  context.py  decorators.py  filter.py  filtercategories.py  logs.py  message_cooldown.py  pagination.py  permission_checks.py  postgresql.py  report.py  settings.py  tasks.py
data/: case.py  cases.py  filtercategory.py  filterword.py  giveaway.py  guild.py  mongo_setup.py  scheduler.py  tag.py  user.py
data/services/: user_service.py
examples/: cog.py
model/: cases.py  guild.py
utils/: checks.py  config.py  context.py  database.py  logger.py  permissions.py  slash_perms.py
